erDiagram
    USER ||--o{ EVENT : creates
    USER ||--o{ SWIPE : performs
    USER ||--o{ USER_PREFERENCE : has
    USER ||--o{ NOTIFICATION : receives
    USER |o--o{ USER_RATING : gives
    USER ||--o{ USER_RATING : receives
    USER ||--o{ EVENT_RATING : gives
    USER ||--o{ ATTENDANCE : attends
    USER ||--o{ NOTIFICATION_PREFERENCE : has

    EVENT ||--o{ SWIPE : receives
    EVENT ||--o{ ATTENDANCE : has_attendees
    EVENT ||--o{ EVENT_RATING : has_ratings
    EVENT |o--o{ NOTIFICATION : is_about

    CATEGORY ||--o{ EVENT : belongs_to
    CATEGORY ||--o{ USER_PREFERENCE : is_for

    USER {
        int id PK
        varchar name
        varchar email
        varchar password_hash
        text bio
        int age
        varchar city
        float latitude
        float longitude
        text user_picture
        varchar expo_push_token
        timestamp created_at
    }
    EVENT {
        int id PK
        int creator_id FK
        int category_id FK
        varchar title
        text description
        datetime event_date
        int max_capacity
        varchar street
        varchar city
        varchar state
        varchar zip
        float latitude
        float longitude
        text event_picture
        timestamp created_at
    }
    USER_RATING {
        int id PK
        int rater_id FK
        int ratee_id FK
        int score
        text comment
        timestamp created_at
    }
    EVENT_RATING {
        int id PK
        int user_id FK
        int event_id FK
        int score
        text review
        timestamp sent_at
    }
    ATTENDANCE {
        int id PK
        int user_id FK
        int event_id FK
        timestamp created_at
        timestamp check_in_time
        boolean did_attend
        boolean prompted
    }
    CATEGORY {
        int id PK
        varchar name
    }
    SWIPE {
        int id PK
        int user_id FK
        int event_id FK
        boolean is_interested
        timestamp created_at
    }
    USER_PREFERENCE {
        int user_id PK, FK
        int category_id PK, FK
    }
    NOTIFICATION {
        int id PK
        int user_id FK
        int event_id FK
        varchar content
        boolean is_read
        varchar notification_type
        timestamp created_at
    }
    NOTIFICATION_PREFERENCE {
        int user_id PK, FK
        varchar notification_type PK
        boolean in_app_enabled
        boolean push_enabled
    }